--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,18 @@
 			<version>0.9.5</version>
 		</dependency>
 
+		<dependency>
+		<groupId>io.codearte.jfairy</groupId>
+		<artifactId>jfairy</artifactId>
+		<version>0.5.0</version>
+	</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
