--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,13 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>com.github.tomakehurst</groupId>
+			<artifactId>wiremock</artifactId>
+			<version>2.26.3</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
